// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render content slot correctly 1`] = `
<div class="van-badge van-badge--top-right">
  Custom Content
</div>
`;

exports[`should render nothing when content is empty string 1`] = `""`;

exports[`should render nothing when content is undefined 1`] = `""`;

exports[`should render nothing when content is zero 1`] = `
<div class="van-badge van-badge--top-right">
  0
</div>
`;
